gitops/cluster-apps/avelin/zero/zero-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avelin-zero
  namespace: avelin
  labels:
    app: avelin-zero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avelin-zero
  template:
    metadata:
      labels:
        app: avelin-zero
    spec:
      volumes:
        - name: zero-replica
          persistentVolumeClaim:
            claimName: zero-pvc
      containers:
        - name: avelin-zero
          image: rocicorp/zero:0.15.2025021402
          imagePullPolicy: Always
          ports:
            - containerPort: 4848
              protocol: TCP
          volumeMounts:
            - name: zero-replica
              mountPath: /data
