gitops/cluster-apps/avelin/zero/zero-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avelin-zero-ingress
  labels:
    app: avelin-zero
spec:
  rules:
    - host: zero.avelin.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: avelin-zero-svc
                port:
                  name: http
